--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"s
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+    crossorigin="anonymous"/>
 
     <script src="./script.js"></script>
     <link rel="stylesheet" type="text/css" href="./Index.css">
@@ -17,15 +22,11 @@
 <body>
     <h1 class="header"> Hi there! </h1>
     <h3 class="header"> Javascript Stopwatch </h3>
+        <div class="mainNumber">0:00</div>
         <div class="stopwatch">
-            <div class="button" onclick="reset()">
-                <div class="letter">RESET</div>
-            </div>
-            <div class="button" onclick="start()">
-                <div class="letter">START</div>
-            </div>
-            <div class="button" onclick="stop()">
-                <div class="letter">STOP</div>
+            <button class="btn btn-outline-light btn-lg px-5 mx-4" onclick="reset()">RESET</button>
+            <button class="btn btn-outline-light btn-lg px-5 mx-4" onclick="start()">START</button>
+            <button class="btn btn-outline-light btn-lg px-5 mx-4" onclick="stop()">STOP</button>
             </div>
         </div>
 </body>
